fix wrong overflow

--- a/styleguide/app/app.component.scss
+++ b/styleguide/app/app.component.scss
@@ -6,7 +6,6 @@ main {
 
     top: $header-height;
     height: 100%;
-    overflow: scroll;
 
     aui-sub-menu-item ::ng-deep li {
         text-transform: capitalize; // This is just for nice autogenerated links ;)
